Modified html document files.

--- a/_udas_doc.html
+++ b/_udas_doc.html
@@ -2,24 +2,22 @@
 <html>
  
 <head>
-<TITLE>Help for udas_1_00_b4</TITLE>
+<TITLE>Help for udas_1_00_1</TITLE>
 </head>
  
 <body>
-<H2>Help for udas_1_00_b4</H2>
+<H2>Help for udas_1_00_1</H2>
 <P>
 This page was created by the IDL library routine 
 <CODE>mk_html_help2</CODE>.
 <br>
 <P>
-<STRONG>Last modified: </STRONG>Mon Dec  5 16:32:43 2011.<P>
+<STRONG>Last modified: </STRONG>Fri Feb 10 22:18:00 2012.<P>
  
 <HR>
  
 <A NAME="ROUTINELIST">
 <A NAME="JUMPLIST">
-<A HREF="#LIST_A">A</A>
-,
 <A HREF="#LIST_E">E</A>
 ,
 <A HREF="#LIST_F">F</A>
@@ -53,9 +51,6 @@ iugonet/erg_ground/radar/superdarn</A>
 <P>
 <H1>Alphabetical List of Routines</H1></A>
 <UL>
-<A NAME="LIST_A">
-<LI><A HREF="iugonet/gui_udas_doc_list.html#ACKNOWLEDGEMENT_MESSAGE">
-ACKNOWLEDGEMENT_MESSAGE</A>
 <A NAME="LIST_E">
 <LI><A HREF="iugonet/examples_udas_doc_list.html#ERG_CRIB_SUPERDARN">
 ERG_CRIB_SUPERDARN</A>
@@ -74,11 +69,9 @@ FILE_RETRIEVE_IUG</A>
 GET_FIXED_PIXEL_GRAPH">GET_FIXED_PIXEL_GRAPH</A>
 <LI><A HREF="iugonet/erg_ground/radar/superdarn_udas_doc_list.html#GET_SPHCNTR">
 GET_SPHCNTR</A>
-<LI><A HREF="iugonet/gui_udas_doc_list.html#GUI_LOAD_ACKNOWLEDGEMENT">
-GUI_LOAD_ACKNOWLEDGEMENT</A>
 <A NAME="LIST_I">
-<LI><A HREF="iugonet/examples_udas_doc_list.html#IUG_CRIB_BLR_RISH_TXT">
-IUG_CRIB_BLR_RISH_TXT</A>
+<LI><A HREF="iugonet/examples_udas_doc_list.html#IUG_CRIB_BLR_RISH">
+IUG_CRIB_BLR_RISH</A>
 <LI><A HREF="iugonet/examples_udas_doc_list.html#IUG_CRIB_EAR">IUG_CRIB_EAR</A>
 <LI><A HREF="iugonet/examples_udas_doc_list.html#IUG_CRIB_EISCAT">
 IUG_CRIB_EISCAT</A>
@@ -90,19 +83,23 @@ IUG_CRIB_GMAG_SERC</A>
 IUG_CRIB_GMAG_WDC</A>
 <LI><A HREF="iugonet/examples_udas_doc_list.html#IUG_CRIB_IPRT">IUG_CRIB_IPRT
 </A>
-<LI><A HREF="iugonet/examples_udas_doc_list.html#IUG_CRIB_LTR_RISH_TXT">
-IUG_CRIB_LTR_RISH_TXT</A>
+<LI><A HREF="iugonet/examples_udas_doc_list.html#IUG_CRIB_LTR_RISH">
+IUG_CRIB_LTR_RISH</A>
 <LI><A HREF="iugonet/examples_udas_doc_list.html#IUG_CRIB_METEOR_RISH_KTB_NC">
 IUG_CRIB_METEOR_RISH_KTB_NC</A>
+<LI><A HREF="iugonet/examples_udas_doc_list.html#IUG_CRIB_METEOR_RISH_KTB_TXT">
+IUG_CRIB_METEOR_RISH_KTB_TXT</A>
 <LI><A HREF="iugonet/examples_udas_doc_list.html#IUG_CRIB_METEOR_RISH_SRP_NC">
 IUG_CRIB_METEOR_RISH_SRP_NC</A>
+<LI><A HREF="iugonet/examples_udas_doc_list.html#IUG_CRIB_METEOR_RISH_SRP_TXT">
+IUG_CRIB_METEOR_RISH_SRP_TXT</A>
 <LI><A HREF="iugonet/examples_udas_doc_list.html#IUG_CRIB_MF_RISH_PAM_NC">
 IUG_CRIB_MF_RISH_PAM_NC</A>
 <LI><A HREF="iugonet/examples_udas_doc_list.html#IUG_CRIB_MU">IUG_CRIB_MU</A>
-<LI><A HREF="iugonet/examples_udas_doc_list.html#IUG_CRIB_WPR_RISH_TXT">
-IUG_CRIB_WPR_RISH_TXT</A>
-<LI><A HREF="iugonet/load_udas_doc_list.html#IUG_LOAD_BLR_RISH_TXT">
-IUG_LOAD_BLR_RISH_TXT</A>
+<LI><A HREF="iugonet/examples_udas_doc_list.html#IUG_CRIB_WPR_RISH">
+IUG_CRIB_WPR_RISH</A>
+<LI><A HREF="iugonet/load_udas_doc_list.html#IUG_LOAD_BLR_RISH">
+IUG_LOAD_BLR_RISH</A>
 <br>Queries the Kyoto_RISH server for the CSV data (uwnd, vwnd, wwnd, pwr1-5, wdt1-5)
 <LI><A HREF="iugonet/load_udas_doc_list.html#IUG_LOAD_EAR">IUG_LOAD_EAR</A>
 <br>Queries the Kyoto_RISH servers for all the observation data (troposphere and FAI)
@@ -165,8 +162,8 @@ IUG_LOAD_GMAG_WDC_WDCHR</A>
 <LI><A HREF="iugonet/load_udas_doc_list.html#IUG_LOAD_GMAG_WDC_WDCMIN">
 IUG_LOAD_GMAG_WDC_WDCMIN</A>
 <LI><A HREF="iugonet/load_udas_doc_list.html#IUG_LOAD_IPRT">IUG_LOAD_IPRT</A>
-<LI><A HREF="iugonet/load_udas_doc_list.html#IUG_LOAD_LTR_RISH_TXT">
-IUG_LOAD_LTR_RISH_TXT</A>
+<LI><A HREF="iugonet/load_udas_doc_list.html#IUG_LOAD_LTR_RISH">
+IUG_LOAD_LTR_RISH</A>
 <br>Queries the Kyoto_RISH servers for the observation data (uwnd, vwnd, wwnd, pwr1-5, wdt1-5)
 <LI><A HREF="iugonet/load_udas_doc_list.html#IUG_LOAD_METEOR_KTB_NC">
 IUG_LOAD_METEOR_KTB_NC</A>
@@ -197,15 +194,12 @@ IUG_LOAD_MF_RISH_PAM_NC</A>
 <br>Queries the Kyoto_RISH servers for the observation data (uwind, vwind, wwind)
 <LI><A HREF="iugonet/load_udas_doc_list.html#IUG_LOAD_MU">IUG_LOAD_MU</A>
 <br>Queries the Kyoto_RISH servers for all the observation data taken by
-<LI><A HREF="iugonet/load_udas_doc_list.html#IUG_LOAD_MU_TROP_NC">
-IUG_LOAD_MU_TROP_NC</A>
-<br>Queries the Kyoto_RISH servers for the standard observation data of the
 <LI><A HREF="iugonet/load_udas_doc_list.html#IUG_LOAD_MU_TROP_TXT">
 IUG_LOAD_MU_TROP_TXT</A>
 <br>Queries the Kyoto_RISH servers for the standard observation data of the
 <LI><A HREF="iugonet/load_udas_doc_list.html#IUG_LOAD_SDFIT">IUG_LOAD_SDFIT</A>
-<LI><A HREF="iugonet/load_udas_doc_list.html#IUG_LOAD_WPR_RISH_TXT">
-IUG_LOAD_WPR_RISH_TXT</A>
+<LI><A HREF="iugonet/load_udas_doc_list.html#IUG_LOAD_WPR_RISH">
+IUG_LOAD_WPR_RISH</A>
 <br>Queries the Kyoto_RISH servers for the observation data (uwnd, vwnd, wwnd, pwr1-5, wdt1-5)
 <A NAME="LIST_L">
 <LI><A HREF="iugonet/erg_ground/radar/superdarn_udas_doc_list.html#LOADCT_SD">
@@ -237,6 +231,8 @@ SPECPLOT</A>
 <LI><A HREF="iugonet/erg_ground/radar/superdarn_udas_doc_list.html#SPLITBEAM">
 SPLITBEAM</A>
 <A NAME="LIST_T">
+<LI><A HREF="iugonet/gui_udas_doc_list.html#TEST_LEAP_YR">TEST_LEAP_YR</A>
+<br>Determines whether a given year is a leap year, and
 <LI><A HREF="iugonet/gui_udas_doc_list.html#THM_UI_CALL_SEQUENCE__DEFINE">
 THM_UI_CALL_SEQUENCE__DEFINE</A>
 <br>Stores the sequence of procedure calls that was used to load data.
@@ -249,6 +245,8 @@ THM_UI_LOAD_IUGONET_DATA</A>
 <LI><A HREF="iugonet/gui_udas_doc_list.html#THM_UI_LOAD_IUGONET_DATA_LOAD_PRO">
 THM_UI_LOAD_IUGONET_DATA_LOAD_PRO</A>
 <br>Modularized gui iugonet data loader
+<LI><A HREF="iugonet/gui_udas_doc_list.html#THM_UI_TIMEFIX">THM_UI_TIMEFIX</A>
+<br>Will fix an input time string of yyyy-mm-dd hh:mm:ss.xxxx if there
 </UL><P>
  
 </body>
