--- a/iugonet/examples_udas_doc_list.html
+++ b/iugonet/examples_udas_doc_list.html
@@ -11,7 +11,7 @@ This page was created by the IDL library routine
 <CODE>mk_html_help2</CODE>.
 <br>
 <P>
-<STRONG>Last modified: </STRONG>Mon Dec  5 16:32:43 2011.<P>
+<STRONG>Last modified: </STRONG>Fri Feb 10 22:18:00 2012.<P>
  
 <HR>
  
@@ -20,19 +20,21 @@ This page was created by the IDL library routine
 <UL>
 <H1>iugonet/examples</H1>
 <LI><A HREF="#ERG_CRIB_SUPERDARN">ERG_CRIB_SUPERDARN</A>
-<LI><A HREF="#IUG_CRIB_BLR_RISH_TXT">IUG_CRIB_BLR_RISH_TXT</A>
+<LI><A HREF="#IUG_CRIB_BLR_RISH">IUG_CRIB_BLR_RISH</A>
 <LI><A HREF="#IUG_CRIB_EAR">IUG_CRIB_EAR</A>
 <LI><A HREF="#IUG_CRIB_EISCAT">IUG_CRIB_EISCAT</A>
 <LI><A HREF="#IUG_CRIB_GMAG_NIPR">IUG_CRIB_GMAG_NIPR</A>
 <LI><A HREF="#IUG_CRIB_GMAG_SERC">IUG_CRIB_GMAG_SERC</A>
 <LI><A HREF="#IUG_CRIB_GMAG_WDC">IUG_CRIB_GMAG_WDC</A>
 <LI><A HREF="#IUG_CRIB_IPRT">IUG_CRIB_IPRT</A>
-<LI><A HREF="#IUG_CRIB_LTR_RISH_TXT">IUG_CRIB_LTR_RISH_TXT</A>
+<LI><A HREF="#IUG_CRIB_LTR_RISH">IUG_CRIB_LTR_RISH</A>
 <LI><A HREF="#IUG_CRIB_METEOR_RISH_KTB_NC">IUG_CRIB_METEOR_RISH_KTB_NC</A>
+<LI><A HREF="#IUG_CRIB_METEOR_RISH_KTB_TXT">IUG_CRIB_METEOR_RISH_KTB_TXT</A>
 <LI><A HREF="#IUG_CRIB_METEOR_RISH_SRP_NC">IUG_CRIB_METEOR_RISH_SRP_NC</A>
+<LI><A HREF="#IUG_CRIB_METEOR_RISH_SRP_TXT">IUG_CRIB_METEOR_RISH_SRP_TXT</A>
 <LI><A HREF="#IUG_CRIB_MF_RISH_PAM_NC">IUG_CRIB_MF_RISH_PAM_NC</A>
 <LI><A HREF="#IUG_CRIB_MU">IUG_CRIB_MU</A>
-<LI><A HREF="#IUG_CRIB_WPR_RISH_TXT">IUG_CRIB_WPR_RISH_TXT</A>
+<LI><A HREF="#IUG_CRIB_WPR_RISH">IUG_CRIB_WPR_RISH</A>
 <br>
 </UL><P>
 <HR>
@@ -40,7 +42,7 @@ This page was created by the IDL library routine
 <H1>Routine Descriptions</H1>
 <A NAME="ERG_CRIB_SUPERDARN">
 <H2>ERG_CRIB_SUPERDARN</H2></A>
-<A HREF="#IUG_CRIB_BLR_RISH_TXT">[Next Routine]</A>
+<A HREF="#IUG_CRIB_BLR_RISH">[Next Routine]</A>
 <A HREF="#ROUTINELIST">[List of Routines]</A>
 <PRE>
 PROCEDURE: erg_crib_superdarn
@@ -67,28 +69,28 @@ PROCEDURE: erg_crib_superdarn
 <STRONG>(See <A href="examples/erg_crib_superdarn.pro">iugonet/examples/erg_crib_superdarn.pro</A>)</STRONG><P>
 <HR>
  
-<A NAME="IUG_CRIB_BLR_RISH_TXT">
-<H2>IUG_CRIB_BLR_RISH_TXT</H2></A>
+<A NAME="IUG_CRIB_BLR_RISH">
+<H2>IUG_CRIB_BLR_RISH</H2></A>
 <A HREF="#ERG_CRIB_SUPERDARN">[Previous Routine]</A>
 <A HREF="#IUG_CRIB_EAR">[Next Routine]</A>
 <A HREF="#ROUTINELIST">[List of Routines]</A>
 <PRE>
-PROCEDURE: IUG_CRIB_BLR_RISH_TXT.PRO
-    A sample crib sheet that explains how to use the "<A href="iugonet/load_udas_doc_list.html#IUG_LOAD_BLR_RISH_TXT">IUG_LOAD_BLR_RISH_TXT</A>.pro" 
+PROCEDURE: IUG_CRIB_BLR_RISH.PRO
+    A sample crib sheet that explains how to use the "<A href="iugonet/load_udas_doc_list.html#IUG_LOAD_BLR_RISH">IUG_LOAD_BLR_RISH</A>.pro" 
     procedure. You can run this crib sheet by copying & pasting each 
     command below (except for stop and end) into the IDL command line. 
     Or alternatively compile and run using the command:
-        .run iug_crib_blr_rish_txt
+        .run iug_crib_blr_rish
 
 Written by: A. Shinbori,  Feb 18, 2011
-Last Updated:  A. Shinbori,  Feb 18, 2011
+Last Updated:  A. Shinbori,  Dec 26, 2011
 </PRE><P>
-<STRONG>(See <A href="examples/iug_crib_blr_rish_txt.pro">iugonet/examples/iug_crib_blr_rish_txt.pro</A>)</STRONG><P>
+<STRONG>(See <A href="examples/iug_crib_blr_rish.pro">iugonet/examples/iug_crib_blr_rish.pro</A>)</STRONG><P>
 <HR>
  
 <A NAME="IUG_CRIB_EAR">
 <H2>IUG_CRIB_EAR</H2></A>
-<A HREF="#IUG_CRIB_BLR_RISH_TXT">[Previous Routine]</A>
+<A HREF="#IUG_CRIB_BLR_RISH">[Previous Routine]</A>
 <A HREF="#IUG_CRIB_EISCAT">[Next Routine]</A>
 <A HREF="#ROUTINELIST">[List of Routines]</A>
 <PRE>
@@ -199,21 +201,19 @@ Last Updated: Y. KOYAMA, Oct 6,2011
 <A NAME="IUG_CRIB_IPRT">
 <H2>IUG_CRIB_IPRT</H2></A>
 <A HREF="#IUG_CRIB_GMAG_WDC">[Previous Routine]</A>
-<A HREF="#IUG_CRIB_LTR_RISH_TXT">[Next Routine]</A>
+<A HREF="#IUG_CRIB_LTR_RISH">[Next Routine]</A>
 <A HREF="#ROUTINELIST">[List of Routines]</A>
 <PRE>
- :DESCRIPTION:
-    A crib sheet to demonstrate how to deal with data from Iitate planetary radio observatory using udas.
+PROCEDURE: IUG_CRIB_IPRT
+    A crib sheet to demonstrate how to deal with data from Iitate 
+    planetary radio observatory using udas. You can run this crib 
+    sheet by copying&pasting each command below into the IDL command line. 
+    Or alternatively compile and run using the command:
+        .run iug_crib_iprt
 
-    You can run this crib sheet by copying&pasting each command 
-    below into the IDL command line. 
-
- AUTHOR: 
-   Mizuki YONEDA (E-mail: yoneda@pparc.gp.tohoku.ac.jp)
+ Written by: M. Yoneda, Nov 11, 2011 
+ Last Update: M. Yoneda, Jan 30, 2012
    
- :HISTORY:
-    2011/11/21: Created
-
 ;;;;;;;;;;;;CAUTION;;;;;;;;;;;;;;
 
  To plot data from Iitate planetary radio observatory, libraries for fits 
@@ -225,29 +225,29 @@ Last Updated: Y. KOYAMA, Oct 6,2011
 <STRONG>(See <A href="examples/iug_crib_iprt.pro">iugonet/examples/iug_crib_iprt.pro</A>)</STRONG><P>
 <HR>
  
-<A NAME="IUG_CRIB_LTR_RISH_TXT">
-<H2>IUG_CRIB_LTR_RISH_TXT</H2></A>
+<A NAME="IUG_CRIB_LTR_RISH">
+<H2>IUG_CRIB_LTR_RISH</H2></A>
 <A HREF="#IUG_CRIB_IPRT">[Previous Routine]</A>
 <A HREF="#IUG_CRIB_METEOR_RISH_KTB_NC">[Next Routine]</A>
 <A HREF="#ROUTINELIST">[List of Routines]</A>
 <PRE>
-PROCEDURE: IUG_CRIB_LTR_RISH_TXT.PRO
-    A sample crib sheet that explains how to use the "<A href="iugonet/load_udas_doc_list.html#IUG_LOAD_LTR_RISH_TXT">IUG_LOAD_LTR_RISH_TXT</A>.pro" 
+PROCEDURE: IUG_CRIB_LTR_RISH.PRO
+    A sample crib sheet that explains how to use the "<A href="iugonet/load_udas_doc_list.html#IUG_LOAD_LTR_RISH">IUG_LOAD_LTR_RISH</A>.pro" 
     procedure. You can run this crib sheet by copying & pasting each 
     command below (except for stop and end) into the IDL command line. 
     Or alternatively compile and run using the command:
-        .run iug_crib_ltr_rish_txt
+        .run iug_crib_ltr_rish
 
 Written by: A. Shinbori,  Feb 18, 2011
-Last Updated:  A. Shinbori,  Feb 18, 2011
+Last Updated:  A. Shinbori,  Dec 26, 2011
 </PRE><P>
-<STRONG>(See <A href="examples/iug_crib_ltr_rish_txt.pro">iugonet/examples/iug_crib_ltr_rish_txt.pro</A>)</STRONG><P>
+<STRONG>(See <A href="examples/iug_crib_ltr_rish.pro">iugonet/examples/iug_crib_ltr_rish.pro</A>)</STRONG><P>
 <HR>
  
 <A NAME="IUG_CRIB_METEOR_RISH_KTB_NC">
 <H2>IUG_CRIB_METEOR_RISH_KTB_NC</H2></A>
-<A HREF="#IUG_CRIB_LTR_RISH_TXT">[Previous Routine]</A>
-<A HREF="#IUG_CRIB_METEOR_RISH_SRP_NC">[Next Routine]</A>
+<A HREF="#IUG_CRIB_LTR_RISH">[Previous Routine]</A>
+<A HREF="#IUG_CRIB_METEOR_RISH_KTB_TXT">[Next Routine]</A>
 <A HREF="#ROUTINELIST">[List of Routines]</A>
 <PRE>
 PROCEDURE: IUG_CRIB_METEOR_RISH_KTB_NC.PRO
@@ -263,10 +263,29 @@ Last Updated:  A. Shinbori,  DEC 03, 2011
 <STRONG>(See <A href="examples/iug_crib_meteor_rish_ktb_nc.pro">iugonet/examples/iug_crib_meteor_rish_ktb_nc.pro</A>)</STRONG><P>
 <HR>
  
+<A NAME="IUG_CRIB_METEOR_RISH_KTB_TXT">
+<H2>IUG_CRIB_METEOR_RISH_KTB_TXT</H2></A>
+<A HREF="#IUG_CRIB_METEOR_RISH_KTB_NC">[Previous Routine]</A>
+<A HREF="#IUG_CRIB_METEOR_RISH_SRP_NC">[Next Routine]</A>
+<A HREF="#ROUTINELIST">[List of Routines]</A>
+<PRE>
+PROCEDURE: IUG_CRIB_METEOR_RISH_KTB_TXT.PRO
+    A sample crib sheet that explains how to use the "iug_crib_meteor_rish_ktb_txt.pro" 
+    procedure. You can run this crib sheet by copying & pasting each 
+    command below (except for stop and end) into the IDL command line. 
+    Or alternatively compile and run using the command:
+        .run iug_crib_meteor_rish_ktb_txt
+
+Written by: A. Shinbori,  Feb 6, 2012
+Last Updated:
+</PRE><P>
+<STRONG>(See <A href="examples/iug_crib_meteor_rish_ktb_txt.pro">iugonet/examples/iug_crib_meteor_rish_ktb_txt.pro</A>)</STRONG><P>
+<HR>
+ 
 <A NAME="IUG_CRIB_METEOR_RISH_SRP_NC">
 <H2>IUG_CRIB_METEOR_RISH_SRP_NC</H2></A>
-<A HREF="#IUG_CRIB_METEOR_RISH_KTB_NC">[Previous Routine]</A>
-<A HREF="#IUG_CRIB_MF_RISH_PAM_NC">[Next Routine]</A>
+<A HREF="#IUG_CRIB_METEOR_RISH_KTB_TXT">[Previous Routine]</A>
+<A HREF="#IUG_CRIB_METEOR_RISH_SRP_TXT">[Next Routine]</A>
 <A HREF="#ROUTINELIST">[List of Routines]</A>
 <PRE>
 PROCEDURE: IUG_CRIB_METEOR_RISH_SRP_NC.PRO
@@ -282,9 +301,28 @@ Last Updated:  A. Shinbori,  DEC 03, 2011
 <STRONG>(See <A href="examples/iug_crib_meteor_rish_srp_nc.pro">iugonet/examples/iug_crib_meteor_rish_srp_nc.pro</A>)</STRONG><P>
 <HR>
  
+<A NAME="IUG_CRIB_METEOR_RISH_SRP_TXT">
+<H2>IUG_CRIB_METEOR_RISH_SRP_TXT</H2></A>
+<A HREF="#IUG_CRIB_METEOR_RISH_SRP_NC">[Previous Routine]</A>
+<A HREF="#IUG_CRIB_MF_RISH_PAM_NC">[Next Routine]</A>
+<A HREF="#ROUTINELIST">[List of Routines]</A>
+<PRE>
+PROCEDURE: IUG_CRIB_METEOR_RISH_SRP_TXT.PRO
+    A sample crib sheet that explains how to use the "iug_crib_meteor_rish_srp_txt.pro" 
+    procedure. You can run this crib sheet by copying & pasting each 
+    command below (except for stop and end) into the IDL command line. 
+    Or alternatively compile and run using the command:
+        .run iug_crib_meteor_rish_srp_txt
+
+Written by: A. Shinbori,  Feb 18, 2011
+Last Updated:  A. Shinbori,  DEC 03, 2011
+</PRE><P>
+<STRONG>(See <A href="examples/iug_crib_meteor_rish_srp_txt.pro">iugonet/examples/iug_crib_meteor_rish_srp_txt.pro</A>)</STRONG><P>
+<HR>
+ 
 <A NAME="IUG_CRIB_MF_RISH_PAM_NC">
 <H2>IUG_CRIB_MF_RISH_PAM_NC</H2></A>
-<A HREF="#IUG_CRIB_METEOR_RISH_SRP_NC">[Previous Routine]</A>
+<A HREF="#IUG_CRIB_METEOR_RISH_SRP_TXT">[Previous Routine]</A>
 <A HREF="#IUG_CRIB_MU">[Next Routine]</A>
 <A HREF="#ROUTINELIST">[List of Routines]</A>
 <PRE>
@@ -304,7 +342,7 @@ Last Updated:  A. Shinbori,  Feb 18, 2011
 <A NAME="IUG_CRIB_MU">
 <H2>IUG_CRIB_MU</H2></A>
 <A HREF="#IUG_CRIB_MF_RISH_PAM_NC">[Previous Routine]</A>
-<A HREF="#IUG_CRIB_WPR_RISH_TXT">[Next Routine]</A>
+<A HREF="#IUG_CRIB_WPR_RISH">[Next Routine]</A>
 <A HREF="#ROUTINELIST">[List of Routines]</A>
 <PRE>
 PROCEDURE: IUG_CRIB_MU.PRO
@@ -320,21 +358,21 @@ Last Updated:  A. Shinbori,  DEC 03, 2011
 <STRONG>(See <A href="examples/iug_crib_mu.pro">iugonet/examples/iug_crib_mu.pro</A>)</STRONG><P>
 <HR>
  
-<A NAME="IUG_CRIB_WPR_RISH_TXT">
-<H2>IUG_CRIB_WPR_RISH_TXT</H2></A>
+<A NAME="IUG_CRIB_WPR_RISH">
+<H2>IUG_CRIB_WPR_RISH</H2></A>
 <A HREF="#IUG_CRIB_MU">[Previous Routine]</A>
 <A HREF="#ROUTINELIST">[List of Routines]</A>
 <PRE>
-PROCEDURE: IUG_CRIB_WPR_RISH_TXT.PRO
-    A sample crib sheet that explains how to use the "<A href="iugonet/load_udas_doc_list.html#IUG_LOAD_WPR_RISH_TXT">IUG_LOAD_WPR_RISH_TXT</A>.pro" 
+PROCEDURE: IUG_CRIB_WPR_RISH.PRO
+    A sample crib sheet that explains how to use the "<A href="iugonet/load_udas_doc_list.html#IUG_LOAD_WPR_RISH">IUG_LOAD_WPR_RISH</A>.pro" 
     procedure. You can run this crib sheet by copying & pasting each 
     command below (except for stop and end) into the IDL command line. 
     Or alternatively compile and run using the command:
-        .run iug_crib_ltr_rish_txt
+        .run iug_crib_ltr_rish
 
 Written by: A. Shinbori,  Nov 12, 2011
-Last Updated:  A. Shinbori,  Nov 12, 2011
+Last Updated:  A. Shinbori,  Dec 26, 2011
 </PRE><P>
-<STRONG>(See <A href="examples/iug_crib_wpr_rish_txt.pro">iugonet/examples/iug_crib_wpr_rish_txt.pro</A>)</STRONG><P>
+<STRONG>(See <A href="examples/iug_crib_wpr_rish.pro">iugonet/examples/iug_crib_wpr_rish.pro</A>)</STRONG><P>
 <HR>
  
