--- a/iugonet/gui_udas_doc_list.html
+++ b/iugonet/gui_udas_doc_list.html
@@ -11,7 +11,7 @@ This page was created by the IDL library routine
 <CODE>mk_html_help2</CODE>.
 <br>
 <P>
-<STRONG>Last modified: </STRONG>Tue Apr 17 14:27:28 2012.<P>
+<STRONG>Last modified: </STRONG>Wed Apr 17 11:44:33 2013.<P>
  
 <HR>
  
@@ -19,54 +19,234 @@ This page was created by the IDL library routine
 <H1>Directory Listing of Routines</H1></A>
 <UL>
 <H1>iugonet/gui</H1>
+<LI><A HREF="#GUI_ACKNOWLEDGEMENT, INSTRUMENT=INSTRUMENT, $">
+GUI_ACKNOWLEDGEMENT, INSTRUMENT=INSTRUMENT, $</A>
+<br>Show data policy for IUGONET data on GUI
+<LI><A HREF="#IUG_INIT">IUG_INIT</A>
+<LI><A HREF="#IUG_UI_LOAD_DATA">IUG_UI_LOAD_DATA</A>
+<br>Generates the tab that loads iugonet data for the gui.
+<LI><A HREF="#IUG_UI_LOAD_DATA_LOAD_PRO">IUG_UI_LOAD_DATA_LOAD_PRO</A>
+<br>Modularized gui iugonet data loader
+<LI><A HREF="#SHOW_ACKNOWLEDGEMENT">SHOW_ACKNOWLEDGEMENT</A>
+<br>Show data usage policy for each observation data.
+<LI><A HREF="#STR2ARR_MAXLET">STR2ARR_MAXLET</A>
+<br>Divide a long string and insert it to a string array.
+<LI><A HREF="#"></A>
+<br>GUI for THEMIS data analysis, including setup of the IUGONET environment variables.
 <LI><A HREF="#THM_UI_CALL_SEQUENCE__DEFINE">THM_UI_CALL_SEQUENCE__DEFINE</A>
 <br>Stores the sequence of procedure calls that was used to load data.
 <LI><A HREF="#THM_UI_INIT_LOAD_WINDOW">THM_UI_INIT_LOAD_WINDOW</A>
 <br>Sets up the window and tab widgets for loading data into the THEMIS GUI.
-<LI><A HREF="#THM_UI_LOAD_IUGONET_DATA">THM_UI_LOAD_IUGONET_DATA</A>
-<br>Generates the tab that loads iugonet data for the gui.
-<LI><A HREF="#THM_UI_LOAD_IUGONET_DATA_LOAD_PRO">
-THM_UI_LOAD_IUGONET_DATA_LOAD_PRO</A>
-<br>Modularized gui iugonet data loader
-<LI><A HREF="#TEST_LEAP_YR">TEST_LEAP_YR</A>
-<br>Determines whether a given year is a leap year, and
-<LI><A HREF="#THM_UI_TIMEFIX">THM_UI_TIMEFIX</A>
-<br>Will fix an input time string of yyyy-mm-dd hh:mm:ss.xxxx if there
 <br>
 </UL><P>
 <HR>
  
 <H1>Routine Descriptions</H1>
-<A NAME="TEST_LEAP_YR">
-<H2>TEST_LEAP_YR</H2></A>
+<A NAME="">
+<H2></H2></A>
+<A HREF="#GUI_ACKNOWLEDGEMENT, INSTRUMENT=INSTRUMENT, $">[Next Routine]</A>
+<A HREF="#ROUTINELIST">[List of Routines]</A>
+<PRE>
+NAME:
+
+ thm_gui_new
+
+PURPOSE:
+ GUI for THEMIS data analysis, including setup of the IUGONET environment variables.
+
+CALLING SEQUENCE:
+ themis_gui_new
+
+INPUT:
+ none
+ 
+ Keywords:
+   Reset - If set will reset all internal settings.  
+           Otherwise, it will try to load the state of the previous call.
+   template_filename - The file name of a previously saved themis template document,
+                   can be used to store user preferences and defaults.
+
+OUTPUT:
+ none
+
+HISTORY:
+
+$LastChangedBy: aaflores $
+$LastChangedDate: 2012-03-14 11:25:43 -0700 (Wed, 14 Mar 2012) $
+$LastChangedRevision: 10090 $
+$URL: svn+ssh://thmsvn@ambrosia.ssl.berkeley.edu/repos/thmsoc/tags/tdas_7_01/idl/themis/thm_ui_new/thm_gui_new.pro $
+</PRE><P>
+<STRONG>(See <A href="gui/thm_gui_new.pro">iugonet/gui/thm_gui_new.pro</A>)</STRONG><P>
+<HR>
+ 
+<A NAME="GUI_ACKNOWLEDGEMENT, INSTRUMENT=INSTRUMENT, $">
+<H2>GUI_ACKNOWLEDGEMENT, INSTRUMENT=INSTRUMENT, $</H2></A>
+<A HREF="#">[Previous Routine]</A>
+<A HREF="#IUG_INIT">[Next Routine]</A>
+<A HREF="#ROUTINELIST">[List of Routines]</A>
+<PRE>
+ NAME: 
+   gui_acknowledgement, instrument=instrument, $
+                        datatype=datatype, $
+                        site_or_param=site_or_param, $
+                        par_names=par_names
+
+ PURPOSE:
+   Show data policy for IUGONET data on GUI
+
+ Written by: Y.-M. Tanaka, May 11, 2012 (ytanaka at nipr.ac.jp)
+</PRE><P>
+<STRONG>(See <A href="gui/gui_acknowledgement.pro">iugonet/gui/gui_acknowledgement.pro</A>)</STRONG><P>
+<HR>
+ 
+<A NAME="IUG_INIT">
+<H2>IUG_INIT</H2></A>
+<A HREF="#GUI_ACKNOWLEDGEMENT, INSTRUMENT=INSTRUMENT, $">[Previous Routine]</A>
+<A HREF="#IUG_UI_LOAD_DATA">[Next Routine]</A>
+<A HREF="#ROUTINELIST">[List of Routines]</A>
+<PRE>
+ PROCEDURE iug_init
+ 
+ :DESCRIPTION:
+    Initialize the environment for loading IUGONET data 
+
+ :NOTE:
+    This procedure is called automatically on executing most of 
+    iugonet_*.pro.   
+ 
+ :Examples:
+ 
+ iug_init
+ 
+ if !iugonet.data_policy.ear then iug_load_ear, ..... 
+ 
+ if ~(iugonet.data_policy.sdfit) then begin
+   print, 'Data is not loaded unless you acknowledge the data policy!'
+   return
+ endif 
+ 
+ :AUTHOR: 
+   Tomo Hori (E-mail: horit@stelab.nagoya-u.ac.jp)
+ :HISTORY: 
+   2011/12/21: Created
+ 
+</PRE><P>
+<STRONG>(See <A href="gui/iug_init.pro">iugonet/gui/iug_init.pro</A>)</STRONG><P>
+<HR>
+ 
+<A NAME="IUG_UI_LOAD_DATA">
+<H2>IUG_UI_LOAD_DATA</H2></A>
+<A HREF="#IUG_INIT">[Previous Routine]</A>
+<A HREF="#IUG_UI_LOAD_DATA_LOAD_PRO">[Next Routine]</A>
+<A HREF="#ROUTINELIST">[List of Routines]</A>
+<PRE>
+NAME:
+  iug_ui_load_data
+
+PURPOSE:
+  Generates the tab that loads iugonet data for the gui.
+
+HISTORY:
+$LastChangedBy: Y.Tanaka $
+$LastChangedDate: 2010-04-20 $
+
+Modifications:
+A. Shinbori, 02/05/2011
+A. Shinbori, 11/05/2012
+A. Shinbori, 12/06/2012
+A. Shinbori, 24/10/2012
+A. Shinbori, 14/12/2012
+
+</PRE><P>
+<STRONG>(See <A href="gui/iug_ui_load_data.pro">iugonet/gui/iug_ui_load_data.pro</A>)</STRONG><P>
+<HR>
+ 
+<A NAME="IUG_UI_LOAD_DATA_LOAD_PRO">
+<H2>IUG_UI_LOAD_DATA_LOAD_PRO</H2></A>
+<A HREF="#IUG_UI_LOAD_DATA">[Previous Routine]</A>
+<A HREF="#SHOW_ACKNOWLEDGEMENT">[Next Routine]</A>
+<A HREF="#ROUTINELIST">[List of Routines]</A>
+<PRE>
+NAME:
+  iug_ui_load_data_load_pro
+
+PURPOSE:
+  Modularized gui iugonet data loader
+
+HISTORY:
+$LastChangedBy: Y.Tanaka $
+$LastChangedDate: 2010-04-20 $
+ 
+Modifications:
+A. Shinbori, 12/05/2010
+A. Shinbori, 10/07/2010
+A. Shinbori, 25/11/2010
+A. Shinbori, 01/11/2011
+A. Shinbori, 01/02/2012
+A. Shinbori, 04/02/2012
+A. Shinbori, 06/03/2012
+A. Shinbori, 12/04/2012
+Y.-M. Tanaka,15/06/2012
+A. Shinbori, 24/10/2012
+A. Shinbori, 14/12/2012
+A. Shinbori, 18/02/2013
+</PRE><P>
+<STRONG>(See <A href="gui/iug_ui_load_data_load_pro.pro">iugonet/gui/iug_ui_load_data_load_pro.pro</A>)</STRONG><P>
+<HR>
+ 
+<A NAME="SHOW_ACKNOWLEDGEMENT">
+<H2>SHOW_ACKNOWLEDGEMENT</H2></A>
+<A HREF="#IUG_UI_LOAD_DATA_LOAD_PRO">[Previous Routine]</A>
+<A HREF="#STR2ARR_MAXLET">[Next Routine]</A>
+<A HREF="#ROUTINELIST">[List of Routines]</A>
+<PRE>
+NAME:
+  show_acknowledgement
+
+PURPOSE:
+  Show data usage policy for each observation data.
+
+EXAMPLE:
+  Answer=show_acknowledgement(instrument=instrument, datatype=datatype, $
+	par_names=par_names)
+
+Code:
+  A. Shinbori, 13/01/2011.
+  
+Modifications:
+  Y.-M. Tanaka, 11/05/2012
+</PRE><P>
+<STRONG>(See <A href="gui/show_acknowledgement.pro">iugonet/gui/show_acknowledgement.pro</A>)</STRONG><P>
+<HR>
+ 
+<A NAME="STR2ARR_MAXLET">
+<H2>STR2ARR_MAXLET</H2></A>
+<A HREF="#SHOW_ACKNOWLEDGEMENT">[Previous Routine]</A>
 <A HREF="#THM_UI_CALL_SEQUENCE__DEFINE">[Next Routine]</A>
 <A HREF="#ROUTINELIST">[List of Routines]</A>
 <PRE>
- NAME:
-       test_leap_yr
- CALLING SEQUENCE:
-       lyr=test_leap_yr(iyr,modays=modays)
+ PROCEDURE: STR2ARR_MAXLET
+   str2arr_maxlet, str, maxlet, str_arr
+
  PURPOSE:
-       Determines whether a given year is a leap year, and
-       returns the number of days in every month
- INPUT:
-       iyr = The year, as an integer
- OUTPUT:
-       lyr= 1 if iyr is a leap year and 0 if not
- KEYWORDS:
-       modays= the number of days in each month
-       modays= [31, 29, 31, 30, 31, 30, 31, 31, 30, 31, 30, 31] for
-       a leap yr, [31, 28, 31, 30, 31, 30, 31, 31, 30, 31, 30, 31] otherwise
- HISTORY:
-       Written 19-OCt-93 by JM
-       Rewritten, 9-jul-2007, jmm
+   Divide a long string and insert it to a string array.
+   str : string or string array
+   maxlet : The maximum number of letters in one line.
+            The default value is 80.
+   strarr : output string array
+
+ EXAMPLE:
+   gatt = cdf_var_atts(cdffilename)
+   print_str_maxlet, gatt.TEXT, 100
+
+ Written by Y.-M. Tanaka, April 27, 2012 (ytanaka at nipr.ac.jp)
 </PRE><P>
-<STRONG>(See <A href="gui/thm_ui_timefix.pro">iugonet/gui/thm_ui_timefix.pro</A>)</STRONG><P>
+<STRONG>(See <A href="gui/str2arr_maxlet.pro">iugonet/gui/str2arr_maxlet.pro</A>)</STRONG><P>
 <HR>
  
 <A NAME="THM_UI_CALL_SEQUENCE__DEFINE">
 <H2>THM_UI_CALL_SEQUENCE__DEFINE</H2></A>
-<A HREF="#TEST_LEAP_YR">[Previous Routine]</A>
+<A HREF="#STR2ARR_MAXLET">[Previous Routine]</A>
 <A HREF="#THM_UI_INIT_LOAD_WINDOW">[Next Routine]</A>
 <A HREF="#ROUTINELIST">[List of Routines]</A>
 <PRE>
@@ -109,7 +289,7 @@ HISTORY:
 $LastChangedBy: pcruce $
 $LastChangedDate: 2011-05-26 15:14:36 -0700 (Thu, 26 May 2011) $
 $LastChangedRevision: 8707 $
-$URL: svn+ssh://thmsvn@ambrosia.ssl.berkeley.edu/repos/thmsoc/tags/tdas_7_00/idl/themis/thm_ui_new/objects/thm_ui_call_sequence__define.pro $
+$URL: svn+ssh://thmsvn@ambrosia.ssl.berkeley.edu/repos/thmsoc/tags/tdas_7_01/idl/themis/thm_ui_new/objects/thm_ui_call_sequence__define.pro $
 
 </PRE><P>
 <STRONG>(See <A href="gui/thm_ui_call_sequence__define.pro">iugonet/gui/thm_ui_call_sequence__define.pro</A>)</STRONG><P>
@@ -118,7 +298,6 @@ $URL: svn+ssh://thmsvn@ambrosia.ssl.berkeley.edu/repos/thmsoc/tags/tdas_7_00/idl
 <A NAME="THM_UI_INIT_LOAD_WINDOW">
 <H2>THM_UI_INIT_LOAD_WINDOW</H2></A>
 <A HREF="#THM_UI_CALL_SEQUENCE__DEFINE">[Previous Routine]</A>
-<A HREF="#THM_UI_LOAD_IUGONET_DATA">[Next Routine]</A>
 <A HREF="#ROUTINELIST">[List of Routines]</A>
 <PRE>
 NAME:
@@ -148,82 +327,5 @@ OUTPUT:
   none
 </PRE><P>
 <STRONG>(See <A href="gui/thm_ui_init_load_window.pro">iugonet/gui/thm_ui_init_load_window.pro</A>)</STRONG><P>
-<HR>
- 
-<A NAME="THM_UI_LOAD_IUGONET_DATA">
-<H2>THM_UI_LOAD_IUGONET_DATA</H2></A>
-<A HREF="#THM_UI_INIT_LOAD_WINDOW">[Previous Routine]</A>
-<A HREF="#THM_UI_LOAD_IUGONET_DATA_LOAD_PRO">[Next Routine]</A>
-<A HREF="#ROUTINELIST">[List of Routines]</A>
-<PRE>
-NAME:
-  thm_ui_load_iugonet_data
-
-PURPOSE:
-  Generates the tab that loads iugonet data for the gui.
-
-HISTORY:
-$LastChangedBy: Y.Tanaka $
-$LastChangedDate: 2010-04-20 $
-
-Modifications:
-A. Shinbori, 02/05/2011
-
-
-
-
-</PRE><P>
-<STRONG>(See <A href="gui/thm_ui_load_iugonet_data.pro">iugonet/gui/thm_ui_load_iugonet_data.pro</A>)</STRONG><P>
-<HR>
- 
-<A NAME="THM_UI_LOAD_IUGONET_DATA_LOAD_PRO">
-<H2>THM_UI_LOAD_IUGONET_DATA_LOAD_PRO</H2></A>
-<A HREF="#THM_UI_LOAD_IUGONET_DATA">[Previous Routine]</A>
-<A HREF="#THM_UI_TIMEFIX">[Next Routine]</A>
-<A HREF="#ROUTINELIST">[List of Routines]</A>
-<PRE>
-NAME:
-  thm_ui_load_iugonet_data_load_pro
-
-PURPOSE:
-  Modularized gui iugonet data loader
-
-HISTORY:
-$LastChangedBy: Y.Tanaka $
-$LastChangedDate: 2010-04-20 $
- 
-Modifications:
-A. Shinbori, 12/05/2010
-A. Shinbori, 10/07/2010
-A. Shinbori, 25/11/2010
-A. Shinbori, 01/11/2011
-A. Shinbori, 01/02/2012
-A. Shinbori, 04/02/2012
-A. Shinbori, 06/03/2012
-A. Shinbori, 12/04/2012
-
-</PRE><P>
-<STRONG>(See <A href="gui/thm_ui_load_iugonet_data_load_pro.pro">iugonet/gui/thm_ui_load_iugonet_data_load_pro.pro</A>)</STRONG><P>
-<HR>
- 
-<A NAME="THM_UI_TIMEFIX">
-<H2>THM_UI_TIMEFIX</H2></A>
-<A HREF="#THM_UI_LOAD_IUGONET_DATA_LOAD_PRO">[Previous Routine]</A>
-<A HREF="#ROUTINELIST">[List of Routines]</A>
-<PRE>
-NAME:
- thm_ui_timefix
-PURPOSE:
- Will fix an input time string of yyyy-mm-dd hh:mm:ss.xxxx if there
- is only 1 digit in the day or hour or second, etc.
- Will also return an error message, if the months, days, hours,
- seconds are not valid
-$LastChangedBy: aaflores $
-$LastChangedDate: 2010-01-28 15:17:35 -0800 (Thu, 28 Jan 2010) $
-$LastChangedRevision: 7174 $
-$URL: svn+ssh://thmsvn@ambrosia.ssl.berkeley.edu/repos/thmsoc/tags/tdas_6_00/idl/themis/thm_ui/thm_ui_timefix.pro $
-unction thm_ui_timefix, time_in, progobj = progobj, _extra = _extra
-</PRE><P>
-<STRONG>(See <A href="gui/thm_ui_timefix.pro">iugonet/gui/thm_ui_timefix.pro</A>)</STRONG><P>
 <HR>
  
