Modified html documents.

--- a/iugonet/tools/mddb_udas_doc_list.html
+++ b/iugonet/tools/mddb_udas_doc_list.html
@@ -11,7 +11,7 @@ This page was created by the IDL library routine
 <CODE>mk_html_help2</CODE>.
 <br>
 <P>
-<STRONG>Last modified: </STRONG>Fri Jun  7 14:17:46 2013.<P>
+<STRONG>Last modified: </STRONG>Mon Jun 10 10:37:11 2013.<P>
  
 <HR>
  
@@ -78,8 +78,8 @@ This page was created by the IDL library routine
    Search granule at the IUGONET metadata database.
 
  Example:
-   iug_get_obsinfo, nlat=40, slat=35, elon=140, wlon=130, $
-             ts='2005-1-1', te=2005-1-2', query='Kyoto', data=data
+   iug_get_datainfo, nlat=60, slat=40, elon=15, wlon=0, $
+            ts='2005-1-1', te='2005-1-2', query='Kyoto', data=data 
 
  KEYWORDS:
    nlat: the northernmost latitude (degree)
